# ICEEMDAN-MKL

./: CMakeLists.txt  README.md  bench_adaptive.cpp  bench_snumber.cpp  cubic_spline_avx2.hpp  eemd_bench.cpp  eemd_debug.cpp  eemd_mkl.hpp  eemd_test.cpp  example_finance_csv.cpp  iceemdan_accuracy_test.cpp  iceemdan_bench.cpp  iceemdan_c.cpp  iceemdan_finance_bench.cpp  iceemdan_mkl.hpp  spline_bench.cpp  test_akima.cpp
python/: iceemdan.py
python/.ipynb_checkpoints/: demo_finance-checkpoint.ipynb
